@@ -2,6 +2,8 @@ Revision history for Bio-miRNAture
 
 1.01    Apr 12 2022.
         # Updates
+        - Implemented subseting HMMs and CMs to be run in parallel.
+        - Correction warning messages when miRNAture did not found candidates.
         - All modes run in parallel using:
           O. Tange (2018): GNU Parallel 2018, Mar 2018, ISBN 9781387509881, DOI https://doi.org/10.5281/zenodo.1146014
         - hmm searches now running by default rfam, mirbase (and user) models.
